app/styles/desktop.scss
/*======================================================*\
 * Mixins
\*======================================================*/

@import "mixins";
@import "fonts";

$icon-font-path: '../fonts/';

@media (min-width: 768px) {
  /*======================================================*\
   * Body
  \*======================================================*/
  body {
  }

  /*======================================================*\
   * Global
  \*======================================================*/
  .mobile-hidden {
    display: auto;
  }

  /*======================================================*\
   * Canvas Overlay
  \*======================================================*/
  /*======================================================*\
   * Parallax Elements
  \*======================================================*/
  .moon-wrapper {
    height: 0px;
  }

  /*======================================================*\
   * Parallax Triggers
  \*======================================================*/
  /*======================================================*\
   * Scroll up
  \*======================================================*/
  .scroll-up img {
    width: 120px;
    height: 120px;
  }

  /*======================================================*\
   * Page css
  \*======================================================*/
  .narrator-logo-full {
    width: 20em;
    display: block;
  }

  .narrator-logo-small {
    position: absolute;
    top: 10%;
    left: 10%;
    height: 2em;
    width: 2.4em;
    display: block;
  }

  .column-left {
    width: 48%;
    float: left;
    padding-right: 2%;
  }

  .column-right {
    width: 50%;
    float: right;
  }

  %section-child {
    margin-left: -37.5%;
    width: 75%;
  }

  //-------------------------------------
  // section-contact
  //-------------------------------------
  #section-contact {
    @extend %section;
  }

  //-------------------------------------
  // section-story-type
  //-------------------------------------

  //-------------------------------------
  // section-workshop
  //-------------------------------------

  //-------------------------------------
  // section-work
  //-------------------------------------

  //-------------------------------------
  // section-approach
  //-------------------------------------
  #section-approach-child {
    text-align: left;
    display: block;
  }

  #section-approach-flex {
    @include flex-container;
  }

  #approach-main {
    width: 48%;
    float: left;
    padding-right: 2%;
    display: block;
    background-color: inherit;
    flex: none;

    h1 {
      font-size: 38px;
      line-height: 110%;
      font-weight: 500;
    }

    .main {
      line-height: 2.5em;
      margin: 2em 0em 3em;
      font-size: 14px;
    }
  }

  #approach-reel {
    width: 48%;
    padding-left: 2%;
    float: right;
    padding-top: 10em;
    display: block;
    flex: none;
    img {
      width: 100%;
    }
  }

  #approach-quote {
    float: left;
    display: block;
    background-color: inherit;

    .quote {
      position: relative;
      text-align: center;
      margin: 1em 0em;

      .quote-text {
        @extend .quote-blue;
        margin: auto;
        max-width: 18em;
        font-size: 26px;
      }
    }

    .quote-attrib {
      margin: 0.5em 0em;
      color: white;
    }
    .white-line {
      background-color: white;
    }
  }

  //-------------------------------------
  // section-about
  //-------------------------------------
  #section-about-child {

    h1 {
      font-size: 42px;
      margin: 0em 0em;
    }

    .main {
      display:block;
      line-height: 2.5em;
      margin: 2em auto;
      font-size: 14px;
      max-width: 60em;
    }

    .sub {
      display:block;
      line-height: 2.5em;
      font-size: 14px;
      margin: 0em auto 3em;
      max-width: 60em;
    }

    .main-mobile {
      display: none;
    }

    .sub-mobile {
      display: none;
    }

    .quote {
      position: relative;
      text-align: center;
      .quote-text {
        margin: auto;
        max-width: 12em;
      }
    }

    .quote-attrib {
      margin: 0.5em 0em;
    }
  }

  //-------------------------------------
  // section-campfire
  //-------------------------------------
  #campfire-wrapper {
    top: 230px;

    h1 {
      font-size: 36px;
      margin: 0em 0em;
      max-width: 100%;
    }
  }

  #campfire-aside {
    position: absolute;
    top: 300px;
    left: 20px;
    width: 20em;
    font-size: 11px;
  }

  #btn-find-story {
    position: absolute;
    left: 0;
    top: 200px;
  }

  #btn-telling-it {
    position: absolute;
    right: 0;
    top: 200px;
  }

  #mountains-image, #campfire-image {
    width: 100%;
    left: 0;
  }

  .campfire-video-container {
    width: 100%;
    left: auto;
  }
}

